Fixed visibility issues on addItem

--- a/TestApplications/Lightstreamer_TestApp/Lightstreamer_Client/Styles/main.css
+++ b/TestApplications/Lightstreamer_TestApp/Lightstreamer_Client/Styles/main.css
@@ -184,6 +184,7 @@ label
     padding: 4px 10px 4px 10px;
     background-color: #6297ff;
     font-weight: bold;
+    cursor: default;
 }
 
 .ui-dialog-titlebar
